--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+/* 320px = 320 / 16 = 20rem (assuming root font-size = 16px) */
+@theme {
+  --breakpoint-xs: 21rem; /* now you can use `xs:` */
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
